--- a/zones/silence/index.html
+++ b/zones/silence/index.html
@@ -1270,10 +1270,10 @@
                             id="nav-files" onclick="switchTab('files')">THE FILES</button>
                         <button
                             class="text-gray-300 hover:text-white px-3 py-2 rounded-md font-medium transition-colors"
-                            id="nav-profiles" onclick="switchTab('profiles')">SUBJECTS</button>
+                            id="nav-profiles" onclick="switchTab('profiles')">THE SUBJECTS</button>
                         <button
                             class="text-gray-300 hover:text-white px-3 py-2 rounded-md font-medium transition-colors"
-                            id="nav-games" onclick="switchTab('games')">GAMES</button>
+                            id="nav-games" onclick="switchTab('games')">THE GAMES</button>
                         <button
                             class="text-gray-300 hover:text-white px-3 py-2 rounded-md font-medium transition-colors"
                             id="nav-audio" onclick="switchTab('audio')">THE STORY</button>
@@ -1300,10 +1300,10 @@
                 onclick="switchTab('files')">THE FILES</button>
             <button
                 class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium w-full text-left"
-                onclick="switchTab('profiles')">SUBJECTS</button>
+                onclick="switchTab('profiles')">THE SUBJECTS</button>
             <button
                 class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium w-full text-left"
-                onclick="switchTab('games')">GAMES</button>
+                onclick="switchTab('games')">THE GAMES</button>
             <button
                 class="text-gray-300 hover:text-white block px-3 py-2 rounded-md text-base font-medium w-full text-left"
                 onclick="switchTab('audio')">THE STORY</button>
@@ -1336,13 +1336,13 @@
                 <div class="flex flex-col sm:flex-row gap-4 justify-center pt-8">
                     <button
                         class="px-8 py-4 bg-white text-black font-bold text-lg hover:bg-gray-200 transition-colors uppercase tracking-widest font-mono-custom flex items-center justify-center gap-2"
-                        onclick="switchTab('files')">
-                        Access Archives
+                        onclick="if(ytPlayer && ytPlayer.pauseVideo) ytPlayer.pauseVideo(); window.open(resolveManifestPath(PIXEL_MANIFEST.CINEMA), '_blank');">
+                        CINEMA ACCESS
                     </button>
                     <button
                         class="px-8 py-4 border border-white/30 text-white font-bold text-lg hover:bg-white/10 transition-colors uppercase tracking-widest font-mono-custom flex items-center justify-center gap-2"
-                        onclick="switchTab('audio')">
-                        <span class="material-symbols-outlined text-xl">play_circle</span> Listen
+                        onclick="toggleMediaPanel('gallery')">
+                        <span class="material-symbols-outlined text-xl">play_circle</span> LYRICS
                     </button>
                 </div>
             </div>
@@ -1375,7 +1375,7 @@
         <section class="hidden h-full overflow-y-auto p-6 md:p-12 bg-zinc-950 pb-24 pt-28" id="games-section">
             <div class="max-w-7xl mx-auto">
                 <header class="mb-12 border-b border-gray-800 pb-6 mt-16">
-                    <h2 class="text-4xl md:text-5xl font-bold text-white mb-2">GAMES</h2>
+                    <h2 class="text-4xl md:text-5xl font-bold text-white mb-2">THE GAMES</h2>
                     <p class="font-mono-custom text-gray-500 text-sm">FOR BETTER OR FOR WORSE</p>
                 </header>
                 <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4" id="games-grid">
@@ -1486,20 +1486,7 @@
 
 
 
-    <!-- Right Side Panel Tabs -->
-    <div id="right-panel-tabs">
-        <!-- CINEMA: Opens in new tab (external app style) -->
-        <a href="#"
-            onclick="event.preventDefault(); if(ytPlayer && ytPlayer.pauseVideo) ytPlayer.pauseVideo(); window.open(PIXEL_MANIFEST.CINEMA, '_blank');"
-            class="right-panel-tab cinema-external" title="Opens in new tab">
-            <span class="material-symbols-outlined" style="font-size: 10px; margin-bottom: 4px;">open_in_new</span>
-            CINEMA
-        </a>
-        <!-- GALLERY: Opens in iframe panel -->
-        <button onclick="toggleMediaPanel('gallery')" class="right-panel-tab">
-            GALLERY
-        </button>
-    </div>
+
 
     <!-- Media Panel (Cinema/Gallery) -->
     <div id="media-panel">
@@ -2673,8 +2660,8 @@
 
             // Media URL mapping - Uses centralized manifest
             const mediaUrls = {
-                'cinema': PIXEL_MANIFEST.CINEMA,
-                'gallery': PIXEL_MANIFEST.ETHEL_GALLERY
+                'cinema': resolveManifestPath(PIXEL_MANIFEST.CINEMA),
+                'gallery': resolveManifestPath(PIXEL_MANIFEST.ETHEL_GALLERY)
             };
 
             // If no type specified (close button clicked), close the panel
