--- a/zones/ethel_gallery/index.html
+++ b/zones/ethel_gallery/index.html
@@ -912,9 +912,10 @@
                     height: '100%',
                     videoId: item.videoId,
                     playerVars: {
-                        autoplay: 1,
+                        autoplay: window.innerWidth > 768 ? 1 : 0,
                         modestbranding: 1,
-                        rel: 0
+                        rel: 0,
+                        origin: window.location.origin
                     },
                     events: {
                         'onStateChange': onPlayerStateChange
