--- a/zones/silentcinema/index.html
+++ b/zones/silentcinema/index.html
@@ -875,7 +875,12 @@
                     videoOptions.endSeconds = track.end;
                 }
 
-                player.loadVideoById(videoOptions);
+                // On mobile, cue instead of load to avoid YouTube bot detection
+                if (window.innerWidth <= 768) {
+                    player.cueVideoById(videoOptions);
+                } else {
+                    player.loadVideoById(videoOptions);
+                }
             }
 
             const title = track.title.toUpperCase();
@@ -932,7 +937,6 @@
 
             // 3. CREATE THE PLAYER NOW (User just clicked!)
             player = new YT.Player('youtube-player', {
-                host: 'https://www.youtube-nocookie.com',
                 height: '100%',
                 width: '100%',
                 videoId: firstVideoId,
