--- a/zones/silentcinema/index.html
+++ b/zones/silentcinema/index.html
@@ -949,10 +949,17 @@
                     'modestbranding': 1,
                     'iv_load_policy': 3,
                     'fs': 0,
-                    'disablekb': 1
+                    'disablekb': 1,
+                    'playsinline': 1
                 },
                 events: {
                     'onReady': (event) => {
+                        // Patch iframe attributes for Edge mobile compatibility
+                        const iframe = event.target.getIframe();
+                        if (iframe) {
+                            iframe.setAttribute('allow', 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share');
+                            iframe.setAttribute('referrerpolicy', 'origin');
+                        }
                         renderMenu();
                         renderTracks();
                         // Highlight the first track in the UI
