--- a/zones/silentcinema/index.html
+++ b/zones/silentcinema/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PIXELSTORTION // VISUAL ARCHIVE</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"
         rel="stylesheet" />
     <link
@@ -452,6 +451,9 @@
         </div>
     </div>
 
+    <!-- YouTube IFrame API (loaded in body, not head, for Edge mobile compatibility) -->
+    <script src="https://www.youtube.com/iframe_api"></script>
+
     <script>
         // ███████████████████████████████████████████████████████████████████████████████
         // ██                                                                           ██
@@ -859,29 +861,63 @@
             currentTrackIdx = idx;
             const track = currentTracks[idx];
 
-            if (player && player.loadVideoById) {
-                // Build video options with optional start/end times
-                const videoOptions = {
-                    videoId: track.id
-                };
-
-                // Add start time if specified (in seconds)
-                if (track.start !== undefined && track.start !== null) {
-                    videoOptions.startSeconds = track.start;
-                }
-
-                // Add end time if specified (in seconds)
-                if (track.end !== undefined && track.end !== null) {
-                    videoOptions.endSeconds = track.end;
-                }
-
-                // On mobile, cue instead of load to avoid YouTube bot detection
-                if (window.innerWidth <= 768) {
-                    player.cueVideoById(videoOptions);
-                } else {
-                    player.loadVideoById(videoOptions);
-                }
+            // DESTROY and REBUILD player each time (matches ethel_gallery pattern - works on Edge mobile)
+            if (player && player.destroy) {
+                player.destroy();
+                player = null;
             }
+
+            // Reset the container with a fresh div
+            const container = document.getElementById('video-frame');
+            let playerDiv = document.getElementById('youtube-player');
+            if (!playerDiv) {
+                playerDiv = document.createElement('div');
+                playerDiv.id = 'youtube-player';
+                playerDiv.className = 'w-full h-full absolute inset-0';
+                container.insertBefore(playerDiv, container.firstChild);
+            }
+            playerDiv.innerHTML = '<div id="yt-player-frame"></div>';
+
+            // Build video options
+            const videoOptions = { videoId: track.id };
+            if (track.start !== undefined && track.start !== null) {
+                videoOptions.startSeconds = track.start;
+            }
+            if (track.end !== undefined && track.end !== null) {
+                videoOptions.endSeconds = track.end;
+            }
+
+            // Create fresh player
+            player = new YT.Player('yt-player-frame', {
+                height: '100%',
+                width: '100%',
+                playerVars: {
+                    'autoplay': 0,
+                    'controls': 1,
+                    'origin': window.location.origin,
+                    'rel': 0,
+                    'modestbranding': 1,
+                    'iv_load_policy': 3,
+                    'playsinline': 1
+                },
+                events: {
+                    'onReady': (event) => {
+                        // Patch iframe for Edge
+                        const iframe = event.target.getIframe();
+                        if (iframe) {
+                            iframe.setAttribute('allow', 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share');
+                            iframe.setAttribute('referrerpolicy', 'origin');
+                        }
+                        // On desktop auto-play, on mobile just cue
+                        if (window.innerWidth > 768) {
+                            player.loadVideoById(videoOptions);
+                        } else {
+                            player.cueVideoById(videoOptions);
+                        }
+                    },
+                    'onStateChange': onPlayerStateChange
+                }
+            });
 
             const title = track.title.toUpperCase();
             document.getElementById('current-title').innerText = title;
@@ -920,58 +956,21 @@
         }
 
         async function initPlayerWithFirstTrack() {
-            // Manually fetch the list once to get the Start ID
+            // Populate the track list
             const charsToFetch = activeCharId === 'all'
                 ? ['isla', 'ethel', 'dominic', 'sticky', 'kinley', 'clipboardMan']
                 : [activeCharId];
 
             const promises = charsToFetch.map(async (cid) => STATIC_MEDIA[cid]?.[activeFilter] || []);
             const results = await Promise.all(promises);
-            const initialTracks = results.flat();
+            currentTracks = results.flat();
 
-            // Set global state
-            currentTracks = initialTracks;
-
-            // If we have tracks, grab the first ID. If not, use a fallback or empty.
-            const firstVideoId = (initialTracks.length > 0) ? initialTracks[0].id : "";
-
-            // 3. CREATE THE PLAYER NOW — empty, no videoId (avoids Edge mobile bot detection)
-            player = new YT.Player('youtube-player', {
-                height: '100%',
-                width: '100%',
-                playerVars: {
-                    'autoplay': 0,
-                    'controls': 1,
-                    'origin': window.location.origin,
-                    'showinfo': 0,
-                    'rel': 0,
-                    'modestbranding': 1,
-                    'iv_load_policy': 3,
-                    'fs': 0,
-                    'disablekb': 1,
-                    'playsinline': 1
-                },
-                events: {
-                    'onReady': (event) => {
-                        // Patch iframe attributes for Edge mobile compatibility
-                        const iframe = event.target.getIframe();
-                        if (iframe) {
-                            iframe.setAttribute('allow', 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share');
-                            iframe.setAttribute('referrerpolicy', 'origin');
-                        }
-                        renderMenu();
-                        renderTracks();
-                        // Cue (don't auto-play) the first track now that player is ready
-                        if (currentTracks.length > 0 && firstVideoId) {
-                            player.cueVideoById(firstVideoId);
-                            const rows = document.querySelectorAll(`[id="track-row-0"]`);
-                            rows.forEach(r => r.classList.add('active'));
-                            document.getElementById('current-title').innerText = currentTracks[0].title.toUpperCase();
-                        }
-                    },
-                    'onStateChange': onPlayerStateChange
-                }
-            });
+            // Render UI, then load first track (loadTrack creates the player)
+            renderMenu();
+            renderTracks();
+            if (currentTracks.length > 0) {
+                loadTrack(0);
+            }
         }
 
         function onPlayerStateChange(event) {
