--- a/zones/ethel_gallery/index.html
+++ b/zones/ethel_gallery/index.html
@@ -773,10 +773,10 @@
                 btnIsla.className = "px-4 py-1 text-xs font-tech border border-gray-700 text-gray-500 hover:border-pink-500 hover:text-pink-400 hover:bg-pink-500/10 transition-all uppercase tracking-widest";
 
                 light.className = "w-2 h-2 bg-green-500 rounded-full animate-pulse shadow-[0_0_10px_#00ff41]";
-                title.innerText = "LINEAR STORY";
-                title.className = "text-4xl md:text-6xl font-bold mb-2 tracking-tighter uppercase glitch-text";
+                title.innerHTML = 'A FICTIONAL STORY <span style="color: rgba(255,255,255,0.25); font-size: 0.6em; letter-spacing: 0.05em;">...mostly</span>';
+                title.className = "text-1xl md:text-3xl font-bold mb-2 tracking-tighter uppercase glitch-text";
                 title.style.color = '#00ff41';
-                desc.innerText = "Accessing chronological surveillance logs. Subject \"Ethel\" observes systemic anomalies.";
+                desc.innerText = "Accessing chronological story";
             } else {
                 btnEthel.className = "px-4 py-1 text-xs font-tech border border-gray-700 text-gray-500 hover:border-green-500 hover:text-green-400 hover:bg-green-500/10 transition-all uppercase tracking-widest";
                 btnIsla.className = "px-4 py-1 text-xs font-tech border border-pink-500 bg-pink-500/20 text-pink-400 hover:bg-pink-500 hover:text-black transition-all uppercase tracking-widest shadow-[0_0_15px_rgba(255,0,85,0.3)]";
@@ -785,7 +785,7 @@
                 title.innerText = "HINDSIGHT GRID";
                 title.className = "text-4xl md:text-6xl font-bold mb-2 tracking-tighter uppercase glitch-text";
                 title.style.color = '#ff0055';
-                desc.innerText = "Reconstructing collateral damage. Loud reflections of a past shaped by silence.";
+                desc.innerText = "Loud reflections on a past shaped by silence";
             }
 
             renderGrid();
