--- a/zones/silence/index.html
+++ b/zones/silence/index.html
@@ -1342,7 +1342,7 @@
                     <button
                         class="px-8 py-4 border border-white/30 text-white font-bold text-lg hover:bg-white/10 transition-colors uppercase tracking-widest font-mono-custom flex items-center justify-center gap-2"
                         onclick="toggleMediaPanel('gallery')">
-                        <span class="material-symbols-outlined text-xl">play_circle</span> LYRICS
+                        <span class="material-symbols-outlined text-xl">play_circle</span> POETRY
                     </button>
                 </div>
             </div>
@@ -2566,14 +2566,14 @@
                      alt="${game.name}" 
                      class="w-full h-full object-cover filter grayscale group-hover:filter-none transition-all duration-700">
                 <!-- Dark overlay -->
-                <div class="absolute inset-0 bg-black/60 group-hover:bg-black/20 transition-all duration-500"></div>
+                <div class="absolute inset-0 bg-black/40 group-hover:bg-black/10 transition-all duration-500"></div>
                 <!-- Gradient overlay -->
-                <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-transparent to-transparent"></div>
-                <!-- Game name -->
-                <div class="absolute bottom-0 left-0 p-4 md:p-6">
-                    <h3 class="text-xl md:text-2xl font-bold text-white mb-1">${game.name}</h3>
-                    <p class="font-mono-custom text-xs tracking-wider text-green-500 group-hover:text-green-400">PLAY NOW</p>
-                </div>
+                <div class="absolute inset-0 bg-gradient-to-t from-black/60 via-transparent to-transparent"></div>
+            </div>
+            <!-- Game name (Below image) -->
+            <div class="p-4 border-t border-gray-800 group-hover:border-gray-600 transition-colors bg-zinc-900/50">
+                <h3 class="text-sm font-bold text-white mb-1 truncate" title="${game.name}">${game.name}</h3>
+                <p class="font-mono-custom text-[10px] tracking-wider text-green-500 group-hover:text-green-400">PLAY NOW</p>
             </div>
         </div>
     `).join('');
