dominics trailer game

--- a/zones/games/BrutalTherapy_Isla.html
+++ b/zones/games/BrutalTherapy_Isla.html
@@ -209,9 +209,13 @@
                         <h3 class="text-xs font-black uppercase text-red-600 border-b border-red-900 mb-2">Subject
                             Dossier</h3>
                         <p class="text-[11px] leading-relaxed text-white/70 italic">"Isla possesses her biological
-                            father's (High Court Judge) IQ. She reads systems, not people. Dominic views his violence as
-                            'Noble Acts'. The $20B criminal empire is masked by construction covers. Her mother is
-                            'Polished Vomit'."</p>
+                            father's (High Court Judge) intelligence. She reads systems and people equally well. She
+                            also
+                            picks locks like a magician.
+                            Dominic is Isla's step father. He is a calm menace who views his violence as 'Noble'. He
+                            owns Australia's largest building development company which is a mask for his $20B criminal
+                            empire. Dominioc Is not her father
+                            Isla describes her mother as 'Polished Vomit'."</p>
                     </div>
                 </div>
 
