--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0">
 
     <!-- Centralized URL Manifest - MUST be loaded before other scripts -->
-    <script
-        src="/site-manifest.js"></script>
+    <script src="/site-manifest.js"></script>
 
     <style>
         :root {
@@ -1106,6 +1105,18 @@
 
     <!-- Hidden audio element for character song snippets -->
     <audio id="characterAudio" preload="none"></audio>
+
+
+    <!-- AUDIO ADVISORY -->
+    <div class="fixed bottom-8 left-1/2 -translate-x-1/2 z-50 pointer-events-none user-select-none">
+        <div class="flex flex-col items-center gap-1 opacity-60">
+            <div class="inline-flex items-center gap-2 border border-white/10 bg-black/40 px-3 py-1 backdrop-blur-sm">
+                <span class="material-symbols-outlined text-white/50 text-xs animate-pulse">volume_up</span>
+                <span class="font-mono text-[10px] text-white/50 tracking-[0.3em] uppercase">Audio Essential</span>
+            </div>
+            <div class="font-mono text-[9px] text-white/30 tracking-[0.2em]">MAXIMUM VOLUME RECOMMENDED</div>
+        </div>
+    </div>
 
     <script>
         // --- 1. MOBILE INTERACTION ENGINE ---
