--- a/index.html
+++ b/index.html
@@ -1108,13 +1108,20 @@
 
 
     <!-- AUDIO ADVISORY -->
-    <div class="fixed bottom-8 left-1/2 -translate-x-1/2 z-50 pointer-events-none user-select-none">
-        <div class="flex flex-col items-center gap-1 opacity-60">
-            <div class="inline-flex items-center gap-2 border border-white/10 bg-black/40 px-3 py-1 backdrop-blur-sm">
-                <span class="material-symbols-outlined text-white/50 text-xs animate-pulse">volume_up</span>
-                <span class="font-mono text-[10px] text-white/50 tracking-[0.3em] uppercase">Audio Essential</span>
+    <div
+        class="fixed bottom-12 md:bottom-8 left-1/2 -translate-x-1/2 z-50 pointer-events-none user-select-none w-full px-4">
+        <div class="flex flex-col items-center gap-2 opacity-80 md:opacity-60 transition-opacity hover:opacity-100">
+            <div
+                class="inline-flex items-center gap-3 border border-white/20 bg-black/60 px-5 py-2 backdrop-blur-md rounded-sm shadow-lg">
+                <span
+                    class="material-symbols-outlined text-white/70 text-sm md:text-base animate-pulse">volume_up</span>
+                <span class="font-mono text-xs md:text-sm text-white/80 tracking-[0.2em] uppercase font-bold">Audio
+                    Essential</span>
             </div>
-            <div class="font-mono text-[9px] text-white/30 tracking-[0.2em]">MAXIMUM VOLUME RECOMMENDED</div>
+            <div
+                class="font-mono text-[10px] md:text-xs text-center text-white/50 tracking-[0.15em] bg-black/40 px-2 py-0.5 rounded">
+                LOUD VOLUME HIGHLY RECOMMENDED
+            </div>
         </div>
     </div>
 
