--- a/JukeBoxV2.html
+++ b/JukeBoxV2.html
@@ -396,11 +396,16 @@
                 gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
 
                 // USE RGBA16F for EVERYTHING (Physics & Color)
-                gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA16F, w, h, 0, gl.RGBA, gl.FLOAT, null);
+                // Use HALF_FLOAT which is standard for RGBA16F
+                gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA16F, w, h, 0, gl.RGBA, gl.HALF_FLOAT, null);
 
                 const fbo = gl.createFramebuffer();
                 gl.bindFramebuffer(gl.FRAMEBUFFER, fbo);
                 gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, texture, 0);
+
+                // Clear buffer to avoid "lazy initialization" warning
+                gl.clearColor(0, 0, 0, 0);
+                gl.clear(gl.COLOR_BUFFER_BIT);
 
                 return { texture, fbo, width: w, height: h, attach: (id) => { gl.activeTexture(gl.TEXTURE0 + id); gl.bindTexture(gl.TEXTURE_2D, texture); return id; } };
             }
@@ -846,6 +851,12 @@
 
             // Init Jukebox Logic
             jukebox.init(fluid);
+
+            // FORCE START VISUALS NOW (Debug/Fallback)
+            // Even if audio fails later, this ensures user sees fluids immediately upon click.
+            console.log("Force starting visual engine...");
+            fluid.triggerExplosion();
+            jukebox.beatEngine.start();
 
             // Start Progress Loop
             setInterval(() => jukebox.updateProgress(), 1000);
