--- a/JukeBoxV2.html
+++ b/JukeBoxV2.html
@@ -333,7 +333,21 @@
 
                 this.init();
                 this.lastTime = Date.now();
-                this.loop();
+                this.loopDebug(); // Use Debug Loop
+            }
+
+            loopDebug() {
+                const dt = Math.min((Date.now() - this.lastTime) / 1000, 0.016);
+                this.lastTime = Date.now();
+                const gl = this.gl;
+
+                // GREEN SCREEN DEBUG
+                gl.clearColor(0.0, 1.0, 0.0, 1.0);
+                gl.clear(gl.COLOR_BUFFER_BIT);
+
+                if (Math.random() < 0.01) console.log("Fluid loop DEBUG running...", dt);
+
+                requestAnimationFrame(() => this.loopDebug());
             }
 
             init() {
